tests/qd/compile_errors/module_not_found.qd
// Test: using module that doesn't exist

use nonexistent_module

fn main() {
	10 . nl
}
